objects/Work_Order_Lot__c.object
<CustomObject>
    <fields>
        <fullName>Lot_Qty__c</fullName>
        <label>Lot Qty</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Lot_Numbers__c</fullName>
        <label>Original Lot Numbers</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qual_Code__c</fullName>
        <label>Qual Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rework_Lots__c</fullName>
        <label>Rework Lots</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>RMA_Work_Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipName>RMA_Work_Order_Lots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>QMX Work Order Lot</label>
    <nameField>
        <label>Work Order Lots Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Lots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>